feat(kernel): MINOR inclui EvaluationInterface e UpperLowerCalculusInterface no pacote kernel.user_commands